--- a/Team.html
+++ b/Team.html
@@ -145,7 +145,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive priyank img-fluid" src="images/priyank1.jpg" alt="trainer-img" />
+              <img class="responsive priyank img-fluid_o" src="images/priyank1.jpg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="mailto:82.priyank@gmail.com" title="Email"><i class="fa fa-envelope"></i></a>
@@ -161,11 +161,11 @@
               <p>Faculty Advisor</p>
             </div>
           </div>
-
+<!-- 2 -->
         </div>
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
-            <div class="responsive spk-img"> <img class="img-fluid" src="images/DILIP KR SINGH.jpg" alt="trainer-img">
+            <div class="responsive spk-img"> <img class="img-fluid_o" src="images/DILIP KR SINGH.jpg" alt="trainer-img">
               <ul>
                 <li>
                   <a href="mailto:dilipsinghnano1@gmail.com" title="Email"><i class="fa fa-envelope"></i></a>
@@ -196,7 +196,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/Bashar.jpg" alt="trainer-img" />
+              <img class="responsive img-fluid_o" src="images/Bashar.jpg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://www.instagram.com/basshar.r?r=nametag"><i class="fa fa-instagram"></i></a>
@@ -220,7 +220,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/AnikSarkar1.jpeg" alt="trainer-img" />
+              <img class="responsive img-fluid_o" src="images/AnikSarkar1.jpeg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://www.instagram.com/a_too_tall_guy/"><i class="fa fa-instagram"></i></a>
@@ -241,7 +241,7 @@
           </div>
         </div>
         <!-- /col end-->
-        <div class="imageDiv col-xl-3 col-lg-3 d-md-none d-lg-block col-sm-12">
+        <!-- <div class="imageDiv col-xl-3 col-lg-3 d-md-none d-lg-block col-sm-12">
           <div class="speakers">
             <div class="spk-img">
               <img class="responsive img-fluid" src="images/Niharika.jpg" alt="trainer-img" />
@@ -263,11 +263,11 @@
               <p>Vice President</p>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="img-fluid" src="images/IMG_20220906_000220 - AKHIL PADHA(1)_Fotor.jpg" alt="trainer-img" />
+              <img class="img-fluid_o" src="images/IMG_20220906_000220 - AKHIL PADHA(1)_Fotor.jpg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://instagram.com/18_55lensation?utm_medium=copy_link"><i class="fa fa-instagram"></i></a>
@@ -295,7 +295,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/SKR_1430 - Samson Nama.JPG" alt="trainer-img" />
+              <img class="responsive img-fluid_n" src="images/SKR_1430 - Samson Nama.JPG" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://www.instagram.com/invites/contact/?i=mhkc5nmj21dr&utm_content=3s1oh4p"><i class="fa fa-instagram"></i></a>
@@ -319,7 +319,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="imageSpeaker speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/20200731_142644-01.jpeg" alt="trainer-img" />
+              <img class="responsive img-fluid_o" src="images/20200731_142644-01.jpeg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://instagram.com/thecamobile?utm_medium=copy_link"><i class="fa fa-instagram"></i></a>
@@ -343,7 +343,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/IMG_20220501_211935_204-01 - SAGAR KUMAR.jpeg" alt="trainer-img" />
+              <img class="responsive img-fluid_n" src="images/IMG_20220501_211935_204-01 - SAGAR KUMAR.jpeg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://www.instagram.com/sagar_sk14/"><i class="fa fa-instagram"></i></a>
@@ -368,7 +368,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/PXL_20210709_090108406.PORTRAIT - AYUSH SINGH.jpg" alt="trainer-img" />
+              <img class="responsive img-fluid_n" src="images/PXL_20210709_090108406.PORTRAIT - AYUSH SINGH.jpg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://www.linkedin.com/in/ayush-singh-a337a0145/"><i class="fa fa-linkedin"></i></a>
@@ -390,7 +390,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/DSC_0542 - DRISTI LAHKAR.JPG" alt="trainer-img" />
+              <img class="responsive img-fluid_n" src="images/DSC_0542 - DRISTI LAHKAR.JPG" alt="trainer-img" />
               <ul>
 
                 <li>
@@ -413,7 +413,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/BA2B7423-FB47-4FEB-9148-4783DAC81EA6 - ABHINAV ANAND.jpeg" alt="trainer-img" />
+              <img class="responsive img-fluid_o" src="images/BA2B7423-FB47-4FEB-9148-4783DAC81EA6 - ABHINAV ANAND.jpeg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://www.linkedin.com/in/abhinav-anand-b5b752237/"><i class="fa fa-linkedin"></i></a>
@@ -434,7 +434,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/20220905_175924 - SHAURYA MITTAL.jpg" alt="trainer-img" />
+              <img class="responsive img-fluid_n" src="images/20220905_175924 - SHAURYA MITTAL.jpg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://instagram.com/amateur_capturer101?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a>
@@ -450,7 +450,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/IMG_20220906_164006 - HEMANT KUMAR.jpg" alt="trainer-img" />
+              <img class="responsive img-fluid_n" src="images/IMG_20220906_164006 - HEMANT KUMAR.jpg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://www.instagram.com/hemant4you/"><i class="fa fa-instagram"></i></a>
@@ -475,7 +475,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/IMG_20220416_142605_034 - ADITYA VIJAY BARARI.jpg" alt="trainer-img" />
+              <img class="responsive img-fluid_n" src="images/IMG_20220416_142605_034 - ADITYA VIJAY BARARI.jpg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://www.instagram.com/adityoooooo?r=nametag"><i class="fa fa-instagram"></i></a>
@@ -499,7 +499,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/IMG_20220609_155218_358 - AMRENDRA KUMAR.jpg" alt="trainer-img" />
+              <img class="responsive img-fluid_o" src="images/IMG_20220609_155218_358 - AMRENDRA KUMAR.jpg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://www.linkedin.com/in/amrendra-kumar-9977b3201"><i class="fa fa-linkedin"></i></a>
@@ -519,7 +519,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/Untitled-1 - SARTHAK SHARMA.jpg" alt="trainer-img" />
+              <img class="responsive img-fluid_n" src="images/Untitled-1 - SARTHAK SHARMA.jpg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://www.linkedin.com/in/sarthak-sharma-45aa04200/"><i class="fa fa-linkedin"></i></a>
@@ -542,7 +542,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/IMG_20220905_194326 - ASHISH KUMAR.jpg" alt="trainer-img" />
+              <img class="responsive img-fluid_n" src="images/IMG_20220905_194326 - ASHISH KUMAR.jpg" alt="trainer-img" />
               <ul>
                 <!-- <li>
                   <a href="#"><i class="fa fa-instagram"></i></a>
@@ -567,7 +567,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/5715A061-BE7D-44A2-931A-7D23CAEE5888 - OHM GUPTA.jpeg" alt="trainer-img" />
+              <img class="responsive img-fluid_n" src="images/5715A061-BE7D-44A2-931A-7D23CAEE5888 - OHM GUPTA.jpeg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://www.linkedin.com/in/ohmgupta7/"><i class="fa fa-linkedin"></i></a>
@@ -588,7 +588,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="Aditya_A responsive img-fluid" src="images/IMG_20220905_193844 - ADITYA ARYAN.jpg" alt="trainer-img" />
+              <img class="Aditya_A responsive img-fluid_o" src="images/IMG_20220905_193844 - ADITYA ARYAN.jpg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://instagram.com/vella_manushya?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a>
@@ -634,7 +634,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/IMG_6172-01 - ABHISHEK KUMAR GHOSH.jpeg" alt="trainer-img" />
+              <img class="responsive img-fluid_n" src="images/IMG_6172-01 - ABHISHEK KUMAR GHOSH.jpeg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://www.instagram.com/_lensaholic_/"><i class="fa fa-instagram"></i></a>
@@ -660,7 +660,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/IMG_3932 - SHARAD ORAON.jpg" alt="trainer-img" />
+              <img class="responsive img-fluid_n" src="images/IMG_3932 - SHARAD ORAON.jpg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://www.instagram.com/wtfsharad"><i class="fa fa-instagram"></i></a>
@@ -683,7 +683,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/20220703_195412.jpg" alt="trainer-img" />
+              <img class="responsive img-fluid_n" src="images/20220703_195412.jpg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://www.instagram.com/genkidama_1/"><i class="fa fa-instagram"></i></a>
@@ -703,7 +703,7 @@
         <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/" alt="trainer-img" />
+              <img class="responsive img-fluid_n" src="images/" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="#"><i class="fa fa-instagram"></i></a>
@@ -727,7 +727,7 @@
         <div class="imageDiv col-xl-3 col-lg-3 col-md-4 col-sm-12">
           <div class="speakers xs-mb30">
             <div class="spk-img">
-              <img class="responsive img-fluid" src="images/IMG_20220906_213453 - MOHIT RAJ.jpg" alt="trainer-img" />
+              <img class="responsive img-fluid_n" src="images/IMG_20220906_213453 - MOHIT RAJ.jpg" alt="trainer-img" />
               <ul>
                 <li>
                   <a href="https://instagram.com/mohit_wolff?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a>
@@ -1125,8 +1125,8 @@
     }
 
     @media screen and (max-width: 850px) {
-      .img-fluid {
-        min-height: 47vh;
+      .img-fluid_o {
+        min-height: 39vh;
         min-width: 37vh;
 
       }
@@ -1135,7 +1135,7 @@
     @media (max-width: 576px) {
       .img-fluid {
 
-        max-height: 45vh;
+        max-height: 39vh;
         max-width: 29vh;
 
 
